Fix spacing in sidebar and add flex properties Fix spacing between ul items to match expected outcome Add cards section to group all cards Add flex properties to cards to wrap cards Add min width for cards so text does not shrink

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -38,6 +38,8 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 320px;
+  flex-basis: 100;
 }
 
 .middle {
@@ -52,10 +54,17 @@ ul {
 }
 
 li {
-  margin-top: 4px;
+  margin-top: 16px;
 }
 
 a {
   text-decoration: none;
   color: #FFFFFF;
+}
+
+.cards {
+  display: flex;
+  padding: 32px;
+  flex-wrap: wrap;
+  gap: 24px;
 }
